[metadata]
name = mixcrypt
version = 0.0.1
author = Justin Mack
author_email = justindmack@gmail.com
description = Lossless homomorphic encryption of floating point values
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/justindgm/mixcrypt
project_urls = 
    Bug Tracker = https://github.com/justindgm/mixcrypt/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src